lsp-migrate: migrate most types